--- a/CSS/style.css
+++ b/CSS/style.css
@@ -2,4 +2,63 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: Inter-Medium, Helvetica, sans-serif;
+    font-size: 14px;
+}
+
+a {
+    text-decoration: none;
+    color: black;
+}
+
+:root {
+    --doBlue: #006aff;
+}
+
+/* NAV BAR */
+header .top-nav {
+    display: grid;
+    grid-template-columns: 0.6fr 1fr 1fr;
+
+    grid-gap: 2vw;
+
+    height: 65px;
+
+    padding: 0 10%;
+}
+.logo-container {
+    display: grid;
+    align-items: center;
+}
+
+.logo-container img {
+    width: 172px;
+}
+
+.link-section {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    place-items: center;
+    grid-gap: 2%;
+}
+
+.link-section li {
+    display: inline-block;
+    display: grid;
+    place-items: center;
+
+    width: 70px;
+    height: 60%;
+}
+
+.company-pages {
+}
+.drop-down {
+    border: none;
+    font-size: 14px;
+}
+
+.sign-up {
+    border: 2px solid var(--doBlue);
+    border-radius: 5px;
 }
