--- a/CSS/style.css
+++ b/CSS/style.css
@@ -15,6 +15,11 @@ a {
     --doBlue: #006aff;
 }
 
+.wrapper {
+    max-width: 1400px;
+    margin: 0 10%;
+}
+
 /* NAV BAR */
 header .top-nav {
     display: grid;
@@ -24,7 +29,7 @@ header .top-nav {
 
     height: 65px;
 
-    padding: 0 10%;
+    /* padding: 0 10%; */
 }
 .logo-container {
     display: grid;
@@ -50,9 +55,6 @@ header .top-nav {
     width: 70px;
     height: 60%;
 }
-
-.company-pages {
-}
 .drop-down {
     border: none;
     font-size: 14px;
@@ -62,3 +64,144 @@ header .top-nav {
     border: 2px solid var(--doBlue);
     border-radius: 5px;
 }
+
+/* DESCRIPTION & CTA */
+.description {
+    background-image: url(//d9hhrg4mnvzow.cloudfront.net/try.digitalocean.com/developerbrand/4fae3026-bg-hero-do-v4.svg);
+
+    height: 50vh;
+
+    overflow: hidden;
+}
+.description .wrapper {
+    display: grid;
+    place-items: center;
+    grid-template-columns: 1.3fr 1fr;
+    grid-template-rows: 100%;
+
+    gap: 3%;
+
+    place-items: center;
+    margin-top: 10px;
+    margin-bottom: 10px;
+
+    height: fit-content;
+}
+
+.information {
+    height: 100%;
+    padding: 5%;
+
+    display: grid;
+    place-items: center;
+}
+.information .title {
+    font-size: 44px;
+    color: white;
+}
+.information p {
+    font-size: 24px;
+    color: white;
+}
+
+.cta .container {
+    display: grid;
+    grid-template-rows: repeat(4, auto);
+
+    background-color: white;
+
+    border-radius: 5px;
+
+    padding: 5% 10%;
+}
+.cta form {
+    display: grid;
+    place-items: center;
+}
+.google {
+    display: inline-block;
+    position: relative;
+
+    width: 100%;
+}
+
+.google img {
+    width: 25px;
+    position: absolute;
+    left: 0;
+    bottom: 6px;
+    margin-left: 2%;
+}
+
+.google span {
+    display: grid;
+    place-content: center;
+}
+
+.cta .container h3 {
+    font-size: 30px;
+    text-align: center;
+}
+
+.cta .container span.blue-text {
+    font-size: 25px;
+}
+.container span {
+    display: inline-block;
+    text-align: center;
+}
+.blue-text {
+    color: var(--doBlue);
+}
+.email-container,
+.password-container {
+    display: grid;
+    place-items: center;
+    width: 100%;
+}
+.cta input,
+.cta button {
+    width: 80%;
+    height: 40px;
+
+    border: 2px solid lightgray;
+    border-radius: 2px;
+
+    background: white;
+
+    box-shadow: 1px 1px #00000034;
+
+    margin: 10px 0;
+}
+.cta .container .create-your-account {
+    background: var(--doBlue);
+
+    color: white;
+    font-weight: 700;
+    border: none;
+}
+.t-and-c {
+    text-align: center;
+}
+
+/* BACKGROUND VIDEO */
+/* .background-video {
+    position: absolute;
+    top: 65px;
+
+    width: 100%;
+    object-fit: contain;
+    z-index: -2;
+} */
+
+/* .video-overlay {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    display: block;
+    z-index: (-1);
+
+    overflow: hidden;
+
+    background-color: #006aff70;
+} */
