--- a/CSS/style.css
+++ b/CSS/style.css
@@ -30,10 +30,13 @@ a {
     --text-grey: #706f6f;
     --bg-grey: #f3f3f3;
 }
-
 .wrapper {
     max-width: 100%;
-    padding: 3em 10%;
+    padding: 30px 10%;
+}
+header.wrapper {
+    padding-top: 0;
+    padding-bottom: 0;
 }
 
 /* NAV BAR */
@@ -119,6 +122,7 @@ header .top-nav {
 .information p {
     font-size: 24px;
     color: white;
+    text-align: left;
 }
 
 .cta .container {
@@ -284,9 +288,6 @@ header .top-nav {
         "list product-info product-info" auto/
         auto auto auto;
 
-    padding-top: 5em;
-    padding-bottom: 5em;
-
     gap: 5%;
 }
 
@@ -337,7 +338,7 @@ header .top-nav {
 }
 
 /* FEATURES */
-.container {
+.features .container {
     display: grid;
     grid-template-columns: repeat(3, auto);
     align-items: stretch;
@@ -371,6 +372,7 @@ header .top-nav {
     grid-template-columns: repeat(3, auto);
 
     border-bottom: 1px white solid;
+    margin: 0 20px;
 
     padding: 5px;
 }
@@ -391,5 +393,70 @@ header .top-nav {
 }
 
 .region .table .code {
-    font-weight: 700;
+    font-weight: 550;
+    font-size: larger;
+}
+
+/* CREATE ACCOUNT */
+
+.create-account {
+    background: linear-gradient(180deg, #0048ff 0%, #0031ad 80%);
+
+    display: grid;
+    place-items: center;
+}
+.create-account h2 {
+    color: white;
+}
+.create-account button {
+    padding: 15px;
+    background-color: white;
+    border-radius: 5px;
+    border: none;
+    color: var(--doBlue);
+    font-weight: bolder;
+}
+
+/* FOOTER */
+
+footer {
+    display: grid;
+    grid-template-columns: auto auto;
+    gap: 10%;
+
+    background-color: #001f6e;
+}
+
+footer .text {
+    text-align: left;
+    font-size: 12px;
+}
+
+footer .text.copyright {
+    font-weight: bold;
+}
+.socials {
+    display: grid;
+    grid-template-columns: repeat(5, 50px);
+}
+
+.socials img {
+    width: 30px;
+}
+
+footer .extra-links {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: auto;
+}
+
+footer .extra-links p {
+    color: white;
+    text-align: left;
+}
+
+footer .extra-links a {
+    display: block;
+    color: var(--text-grey);
+    padding: 5px 0;
 }
