fixed a few more bugs

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -37,7 +37,7 @@ a {
     max-width: 100%;
     padding: 30px 10%;
 }
-header.wrapper {
+header .wrapper {
     padding-top: 0;
     padding-bottom: 0;
 }
@@ -91,6 +91,7 @@ header .top-nav {
 .sign-up {
     border: 2px solid var(--doBlue);
     border-radius: 5px;
+    margin: 5px;
 }
 
 /* DESCRIPTION & CTA */
@@ -267,6 +268,7 @@ main {
 }
 
 .partners .customer-stories {
+    padding-top: 25px;
     display: grid;
     place-items: center;
     color: var(--doBlue);
@@ -275,6 +277,7 @@ main {
 /* PRODUCT STORY */
 .title {
     grid-area: title;
+    padding-bottom: 25px;
 }
 .list {
     grid-area: list;
